[SERVER-20274] Fix OplogDocWriter::writeDocument for big-endian platforms