src/mongo/db/repl/oplog.cpp
@@ -190,7 +190,7 @@ public:
 
         memcpy(buf, _frame.objdata(), _frame.objsize() - 1);  // don't copy final EOO
 
-        reinterpret_cast<int*>(buf)[0] = documentSize();
+        DataView(buf).write(tagLittleEndian((int)documentSize()));
 
         buf += (_frame.objsize() - 1);
         buf[0] = (char)Object;
